# funtran

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: main.f90  utils.f90
